[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/npc.png" type="Texture" id=1]
[ext_resource path="res://src/NPCs/NPC.gd" type="Script" id=2]
[ext_resource path="res://assets/Up.png" type="Texture" id=3]


[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 17 )

[node name="NPC" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PressUp" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -44 )
frames = SubResource( 5 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
modulate = Color( 0.686275, 0.709804, 0.223529, 1 )
position = Vector2( 0, 7 )
shape = SubResource( 2 )

[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
